@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add installer option
 
 0.011     2015-08-17 12:24:04 EDT
   - Remove now unnecessary mma_* options
